--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/react-dom": "^18.2.15",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
+    "react-data-grid": "^7.0.0-beta.44",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
